# socketcan-sa

./: .gitignore  LICENSE  README.md  copilot-instructions.md  pyproject.toml
.github/: copilot-instructions.md
configs/: rules.dev.yaml
docs/: roadmap.md  testing.md
python/: out.csv
python/socketcan_sa/: analyzer.py  shaper.py
src/: __init__.py
src/socketcan_sa/: __init__.py  analyzer.py  rules.py  shaper.py
tests/: conftest.py  sample_frames.py  test_analyzer.py  test_analyzer_cli.py  test_analyzer_coverage.py  test_analyzer_csv.py  test_analyzer_integration.py  test_analyzer_performance.py  test_analyzer_properties.py  test_analyzer_stress.py  test_rules_coverage.py  test_rules_integration.py  test_rules_parser.py  test_rules_performance.py  test_rules_properties.py  test_shaper.py  test_shaper_coverage.py  test_shaper_integration.py  test_shaper_performance.py  test_shaper_properties.py  test_shaper_stress.py
tools/: setup_vcan.sh  shutdown_vcan.sh  wsl-env.sh
